Creación de la base de la app

--- a/vulnerabilidad.html
+++ b/vulnerabilidad.html
@@ -29,8 +29,8 @@
   <nav class="navbar">
     <div class="navbar-container">
       <a href="index.html" class="navbar-brand">
-        <span class="navbar-brand-icon">🌍</span>
-        <span>Clima Tlaxcala</span>
+<!--         <span class="navbar-brand-icon">🌍</span> -->
+        <span>Tlaxcala</span>
       </a>
 
       <button class="navbar-toggle" id="navbarToggle" aria-label="Abrir menú">
