Agregar interactividad a los mapas

--- a/vulnerabilidad.html
+++ b/vulnerabilidad.html
@@ -71,7 +71,7 @@
         <!-- Mapa inicial (pequeño preview) -->
         <div class="story-intro-map" id="introMap"></div>
 
-        <button class="btn-start" id="btnStart">Iniciar Historia 🚀</button>
+        <button class="btn-start" id="btnStart">Iniciar</button>
       </section>
 
       <!-- Contenedor de capítulos con scroll-snap -->
