Ajustes errores de carga

--- a/vulnerabilidad.html
+++ b/vulnerabilidad.html
@@ -66,19 +66,7 @@
           <!-- Mapa -->
           <div class="chapter-map">
             <div class="map-container" id="map-1"></div>
-
-            <!-- Controles de capas -->
-            <div class="map-controls">
-              <div class="map-controls-title">Capas</div>
-              <div class="layer-control">
-                <input type="checkbox" id="layer-municipios-1" checked />
-                <label for="layer-municipios-1">Municipios</label>
-              </div>
-              <div class="layer-control">
-                <input type="checkbox" id="layer-1-1" />
-                <label for="layer-1-1">Zonas de Riesgo</label>
-              </div>
-            </div>
+            <!-- Los controles de capas se generan dinámicamente -->
           </div>
 
           <!-- Card de texto -->
@@ -123,15 +111,7 @@
           <!-- Mapa -->
           <div class="chapter-map">
             <div class="map-container" id="map-2"></div>
-
-            <!-- Controles de capas -->
-            <div class="map-controls">
-              <div class="map-controls-title">Capas</div>
-              <div class="layer-control">
-                <input type="checkbox" id="layer-municipios-2" checked />
-                <label for="layer-municipios-2">Municipios</label>
-              </div>
-            </div>
+            <!-- Los controles de capas se generan dinámicamente -->
           </div>
 
           <!-- Card de texto -->
@@ -175,15 +155,7 @@
           <!-- Mapa -->
           <div class="chapter-map">
             <div class="map-container" id="map-3"></div>
-
-            <!-- Controles de capas -->
-            <div class="map-controls">
-              <div class="map-controls-title">Capas</div>
-              <div class="layer-control">
-                <input type="checkbox" id="layer-municipios-3" checked />
-                <label for="layer-municipios-3">Municipios</label>
-              </div>
-            </div>
+            <!-- Los controles de capas se generan dinámicamente -->
           </div>
 
           <!-- Card de texto -->
