--- a/vulnerabilidad.html
+++ b/vulnerabilidad.html
@@ -63,6 +63,9 @@
       <div class="chapters-container" id="chaptersContainer">
         <!-- CAPÍTULO 1 -->
         <section class="chapter" id="chapter-1" data-chapter="1">
+          <!-- Título del mapa -->
+          <h2 class="map-title">Índice de vulnerabilidad al Cambio Climático por municipio</h2>
+
           <!-- Mapa -->
           <div class="chapter-map">
             <div class="map-container" id="map-1"></div>
@@ -71,43 +74,59 @@
 
           <!-- Card de texto -->
           <div class="chapter-text">
-            <span class="chapter-number">Capítulo 1</span>
-            <h2 class="chapter-title">Contexto Municipal</h2>
+            <!-- <span class="chapter-number">Capítulo 1</span> -->
+            <h2 class="chapter-title">
+              Vulnerabilidad al cambio climático
+            </h2>
             <div class="chapter-content">
               <p>
-                Tlaxcala, el estado más pequeño de México, enfrenta desafíos
-                únicos relacionados con el cambio climático. Su geografía
-                diversa, que va desde valles agrícolas hasta zonas montañosas,
-                presenta diferentes niveles de vulnerabilidad ante eventos
-                climáticos extremos.
+                El cambio climático trae consigo distintos riesgos que afectan
+                nuestra vida diaria:
               </p>
               <p>
-                Los 60 municipios que conforman el estado muestran una
-                distribución heterogénea de vulnerabilidad, determinada por
-                factores como la densidad poblacional, las actividades
-                económicas predominantes, la infraestructura disponible y las
-                condiciones geográficas específicas.
+                <ul>
+                  <li>* Temperaturas más altas.</li>
+                  <li>* Lluvias intensas.</li>
+                  <li>* Sequías prolongadas.</li>
+                  <li>* Fenómenos meteorológicos extremos.</li>
+                </ul>                
               </p>
               <p>
-                En este primer capítulo, exploramos los 15 municipios
-                principales y sus características demográficas que influyen
-                directamente en su capacidad de adaptación ante el cambio
-                climático.
+                Estas amenazas impactan sobre todo a las comunidades y sectores
+                más sensibles, como la agricultura, la salud y la
+                infraestructura.
               </p>
             </div>
           </div>
 
-          <!-- Card de gráfico -->
-          <div class="chapter-chart">
-            <h3 class="chart-title">Vulnerabilidad por Municipio</h3>
-            <div class="chart-container">
-              <canvas id="chart-1"></canvas>
+          <!-- Card combinada de gráfico e info (sin borde entre ellas) -->
+          <div class="chapter-chart-info">
+            <!-- Sección del gráfico -->
+            <div class="chart-section">
+              <h3 class="chart-title">Población vulnerable al cambio climático</h3>
+              <div class="chart-container">
+                <canvas id="chart-1"></canvas>
+              </div>
+            </div>
+
+            <!-- Sección de texto explicativo -->
+            <div class="info-section">
+              <h3 class="info-title">Población vulnerable al cambio climático</h3>
+              <div class="info-content">
+                <p>
+                  <strong>107235 - 18111</strong><br>
+                  La vulnerabilidad al cambio climático refleja el grado en que un sistema es sensible y la capacidad adaptativa con los tres componentes que tienen, siendo su principal territorio enfrentar el cambio climático. Cada una considera las amenazas, exposición, sensibilidad y capacidad adaptativa, incluyendo salud, producción o recursos disponibles. Para Tlaxcala se analizó el análisis de PACET 2023-2030, y 304.
+                </p>
+              </div>
             </div>
           </div>
         </section>
 
         <!-- CAPÍTULO 2 -->
         <section class="chapter" id="chapter-2" data-chapter="2">
+          <!-- Título del mapa -->
+          <h2 class="map-title">Tendencias Climáticas</h2>
+
           <!-- Mapa -->
           <div class="chapter-map">
             <div class="map-container" id="map-2"></div>
@@ -152,6 +171,9 @@
 
         <!-- CAPÍTULO 3 -->
         <section class="chapter" id="chapter-3" data-chapter="3">
+          <!-- Título del mapa -->
+          <h2 class="map-title">Distribución de Vulnerabilidad</h2>
+
           <!-- Mapa -->
           <div class="chapter-map">
             <div class="map-container" id="map-3"></div>
