--- a/vulnerabilidad.html
+++ b/vulnerabilidad.html
@@ -152,7 +152,8 @@
               <p>
                 Localiza espacialmente la cantidad de especies para las cuales existe idoneidad climática en una zona determinada y hacer comparaciones entre diferentes proyecciones.
               </p>
-              <p>
+              <p>Riqueza Biológica en Tlaxcala</p>
+              <p>                
                 <ul>
                   <li>* 2,968 especies registradas (13 phyla, 36 clases, 161 ordenes, 496 familias, 1567 géneros).</li>
                   <li>* 441 especies endémicas de México.</li>
@@ -200,6 +201,10 @@
                 <span class="menu-card-icon">🧬</span>
                 <span class="menu-card-title">Subespecies</span>
               </button>
+              <button class="menu-card" data-subcapitulo="2.9">
+                <span class="menu-card-icon">📊</span>
+                <span class="menu-card-title">Comparativa General</span>
+              </button>
             </div>
           </div>
         </section>
@@ -213,19 +218,20 @@
 
           <!-- Card de texto -->
           <div class="subchapter-text">
-            <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3>
+<!--             <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3> -->
             <div class="text-content">
-              <p>La biodiversidad de Tlaxcala es única y valiosa, pero enfrenta riesgos crecientes por el cambio climático.</p>
-              <p>
-                <ul>
-                  <li>* 2,968 especies registradas (13 phyla, 36 clases, 161 ordenes, 496 familias, 1567 géneros).</li>
-                  <li>* 441 especies endémicas de México.</li>
-                  <li>* 691 especies en la Lista Roja de la IUCN.</li>
-                  <li>* 79 especies bajo alguna categoría de riesgo (NOM-059-SEMARNAT-2010).</li>
-                  <li>* 25 especies prioritarias.</li>
-                </ul>
-              </p>
-              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • ⚠️ Especies en riesgo o prioritarias • 🧬 Subespecies</p>
+                <p>
+                  Los polinizadores, especialmente las abejas, son fundamentales para los ecosistemas y la agricultura: 87 de los principales cultivos alimentarios dependen de ellos. Además de producir miel, capturan carbono, purifican agua y mantienen la biodiversidad.
+                </p>
+                <p>
+                  Entre las 14 especies estudiadas destacan los abejorros (género Bombus), capaces de trabajar en temperaturas extremas y esenciales para cultivos comerciales y plantas silvestres como los agaves. Sin embargo, son vulnerables por sus largos ciclos de vida y necesidades de hábitat específicas.
+                </p>
+                <p>
+                  El cambio climático amenaza estas especies: altera tiempos de floración, aumenta sequías, desplaza especies a mayores altitudes y reduce áreas idóneas. Los resultados muestran que tres especies (21.4%) presentan alta vulnerabilidad según el modelo HadGEM3-GC31-LL bajo el escenario SSP 5-8.5 para 2041-2060, con impactos ecológicos y económicos significativos.
+                </p>                
+                <p>
+                  La disminución en la riqueza de especies y la posible colonización por especies invasoras agravan el panorama. Las disrupciones en las redes de polinización entre plantas y abejas comprometen tanto la seguridad alimentaria como el equilibrio de los ecosistemas naturales, haciendo urgente implementar estrategias de conservación y adaptación.
+                </p>     
             </div>
           </div>
 
@@ -244,6 +250,7 @@
               <button class="nav-item" data-subcapitulo="2.6">⭐ Especies de Interés</button>
               <button class="nav-item" data-subcapitulo="2.7">⚠️ En Riesgo</button>
               <button class="nav-item" data-subcapitulo="2.8">🧬 Subespecies</button>
+              <button class="nav-item" data-subcapitulo="2.9">📊 Comparativa</button>
             </div>
           </div>
 
@@ -262,19 +269,20 @@
 
           <!-- Card de texto -->
           <div class="subchapter-text">
-            <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3>
+<!--             <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3> -->
             <div class="text-content">
-              <p>La biodiversidad de Tlaxcala es única y valiosa, pero enfrenta riesgos crecientes por el cambio climático.</p>
-              <p>
-                <ul>
-                  <li>* 2,968 especies registradas (13 phyla, 36 clases, 161 ordenes, 496 familias, 1567 géneros).</li>
-                  <li>* 441 especies endémicas de México.</li>
-                  <li>* 691 especies en la Lista Roja de la IUCN.</li>
-                  <li>* 79 especies bajo alguna categoría de riesgo (NOM-059-SEMARNAT-2010).</li>
-                  <li>* 25 especies prioritarias.</li>
-                </ul>
-              </p>
-              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • ⚠️ Especies en riesgo o prioritarias • 🧬 Subespecies</p>
+                <p>
+                  Los agaves son plantas de gran importancia ecológica y cultural en Mesoamérica, usadas desde hace milenios. Producen aguamiel, jarabe, pulque y destilados como mezcal, tequila, bacanora y raicilla. También se emplean en construcción, vestimenta y alimentación.
+                </p>
+                <p>
+                  Tlaxcala es el segundo productor de maguey pulquero en México, siendo el pulque parte fundamental de su identidad cultural. Nanacamilpa destaca con 92 usos diferentes para 8-12 razas de agave. De las especies evaluadas, tres se usan para mezcal (A. americana, A. angustifolia y A. salmiana subsp. crassispina) y cuatro para pulque (A. atrovirens, A. americana, A. salmiana y A. mapisaga).
+                </p>
+                <p>
+                  El cambio climático representa amenazas y oportunidades. La falta de reproducción sexual en los sistemas de producción los hace vulnerables a plagas y enfermedades. Se prevé modificación en su distribución geográfica, potencialmente disrumpiendo la relación con el murciélago magueyero. Sin embargo, las zonas climáticamente idóneas podrían expandirse, abriendo nuevas áreas de cultivo.
+                </p>                
+                <p>
+                  Los resultados indican que seis especies (50% del total evaluado) serán altamente vulnerables según el modelo HadGEM3-GC31-LL, escenario SSP 2-4.5 para 2041-2060.
+                </p>   
             </div>
           </div>
 
@@ -293,6 +301,7 @@
               <button class="nav-item" data-subcapitulo="2.6">⭐ Especies de Interés</button>
               <button class="nav-item" data-subcapitulo="2.7">⚠️ En Riesgo</button>
               <button class="nav-item" data-subcapitulo="2.8">🧬 Subespecies</button>
+              <button class="nav-item" data-subcapitulo="2.9">📊 Comparativa</button>
             </div>
           </div>
 
@@ -342,6 +351,7 @@
               <button class="nav-item" data-subcapitulo="2.6">⭐ Especies de Interés</button>
               <button class="nav-item" data-subcapitulo="2.7">⚠️ En Riesgo</button>
               <button class="nav-item" data-subcapitulo="2.8">🧬 Subespecies</button>
+              <button class="nav-item" data-subcapitulo="2.9">📊 Comparativa</button>
             </div>
           </div>
 
@@ -391,6 +401,7 @@
               <button class="nav-item" data-subcapitulo="2.6">⭐ Especies de Interés</button>
               <button class="nav-item" data-subcapitulo="2.7">⚠️ En Riesgo</button>
               <button class="nav-item" data-subcapitulo="2.8">🧬 Subespecies</button>
+              <button class="nav-item" data-subcapitulo="2.9">📊 Comparativa</button>
             </div>
           </div>
 
@@ -440,6 +451,7 @@
               <button class="nav-item" data-subcapitulo="2.6">⭐ Especies de Interés</button>
               <button class="nav-item" data-subcapitulo="2.7">⚠️ En Riesgo</button>
               <button class="nav-item" data-subcapitulo="2.8">🧬 Subespecies</button>
+              <button class="nav-item" data-subcapitulo="2.9">📊 Comparativa</button>
             </div>
           </div>
 
@@ -489,6 +501,7 @@
               <button class="nav-item active" data-subcapitulo="2.6">⭐ Especies de Interés</button>
               <button class="nav-item" data-subcapitulo="2.7">⚠️ En Riesgo</button>
               <button class="nav-item" data-subcapitulo="2.8">🧬 Subespecies</button>
+              <button class="nav-item" data-subcapitulo="2.9">📊 Comparativa</button>
             </div>
           </div>
 
@@ -538,6 +551,7 @@
               <button class="nav-item" data-subcapitulo="2.6">⭐ Especies de Interés</button>
               <button class="nav-item active" data-subcapitulo="2.7">⚠️ En Riesgo</button>
               <button class="nav-item" data-subcapitulo="2.8">🧬 Subespecies</button>
+              <button class="nav-item" data-subcapitulo="2.9">📊 Comparativa</button>
             </div>
           </div>
 
@@ -587,12 +601,69 @@
               <button class="nav-item" data-subcapitulo="2.6">⭐ Especies de Interés</button>
               <button class="nav-item" data-subcapitulo="2.7">⚠️ En Riesgo</button>
               <button class="nav-item active" data-subcapitulo="2.8">🧬 Subespecies</button>
+              <button class="nav-item" data-subcapitulo="2.9">📊 Comparativa</button>
             </div>
           </div>
 
           <!-- Mapa -->
           <div class="subchapter-map">
             <div class="map-container" id="map-2-8"></div>
+          </div>
+        </section>
+
+        <!-- SUB-CAPÍTULO 2.9: COMPARATIVA GENERAL -->
+        <section class="chapter subchapter-biodiversity" id="chapter-2-9" data-chapter="2.9" style="display: none;">
+          <!-- Título del sub-capítulo -->
+          <div class="subchapter-title">
+            <h2>📊 Comparativa General de Especies</h2>
+          </div>
+
+          <!-- Card de texto a la izquierda -->
+          <div class="subchapter-text">
+            <h3 class="text-title">Resumen de la Vulnerabilidad de la Biodiversidad</h3>
+            <div class="text-content">
+              <p>Esta sección presenta una comparativa general de todos los grupos taxonómicos analizados en los subcapítulos anteriores.</p>
+              <p>
+                El gráfico muestra la distribución de especies por categoría:
+                <ul>
+                  <li>* 🐝 Abejas</li>
+                  <li>* 🌵 Agaves</li>
+                  <li>* 🍄 Hongos</li>
+                  <li>* 🦋 Polillas</li>
+                  <li>* 🦇 Murciélagos</li>
+                  <li>* ⭐ Especies de interés</li>
+                  <li>* ⚠️ Especies en riesgo o prioritarias</li>
+                  <li>* 🧬 Subespecies</li>
+                </ul>
+              </p>
+              <p>Esta comparativa permite identificar qué grupos requieren mayor atención en las estrategias de conservación.</p>
+            </div>
+          </div>
+
+          <!-- Menú de navegación superior -->
+          <div class="subchapter-menu">
+            <button class="back-button" data-action="back-to-biodiversity">
+              ← Volver a Biodiversidad
+            </button>
+            <span class="menu-divider"></span>
+            <div class="subchapter-nav">
+              <button class="nav-item" data-subcapitulo="2.1">🐝 Abejas</button>
+              <button class="nav-item" data-subcapitulo="2.2">🌵 Agaves</button>
+              <button class="nav-item" data-subcapitulo="2.3">🍄 Hongos</button>
+              <button class="nav-item" data-subcapitulo="2.4">🦋 Polillas</button>
+              <button class="nav-item" data-subcapitulo="2.5">🦇 Murciélagos</button>
+              <button class="nav-item" data-subcapitulo="2.6">⭐ Especies de Interés</button>
+              <button class="nav-item" data-subcapitulo="2.7">⚠️ En Riesgo</button>
+              <button class="nav-item" data-subcapitulo="2.8">🧬 Subespecies</button>
+              <button class="nav-item active" data-subcapitulo="2.9">📊 Comparativa</button>
+            </div>
+          </div>
+
+          <!-- Card de imagen debajo del submenú -->
+          <div class="chapter-chart">
+            <div class="chart-container">
+              <img src="images/figura25.png" alt="Comparativa General de Especies">
+            </div>
           </div>
         </section>
 
