--- a/vulnerabilidad.html
+++ b/vulnerabilidad.html
@@ -320,19 +320,20 @@
 
           <!-- Card de texto -->
           <div class="subchapter-text">
-            <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3>
+            <!-- <h3 class="text-title">Vulnerabilidad de la biodiversidad</h3> -->
             <div class="text-content">
-              <p>La biodiversidad de Tlaxcala es única y valiosa, pero enfrenta riesgos crecientes por el cambio climático.</p>
-              <p>
-                <ul>
-                  <li>* 2,968 especies registradas (13 phyla, 36 clases, 161 ordenes, 496 familias, 1567 géneros).</li>
-                  <li>* 441 especies endémicas de México.</li>
-                  <li>* 691 especies en la Lista Roja de la IUCN.</li>
-                  <li>* 79 especies bajo alguna categoría de riesgo (NOM-059-SEMARNAT-2010).</li>
-                  <li>* 25 especies prioritarias.</li>
-                </ul>
-              </p>
-              <p>Entre ellas destacan:🐝 Abejas • 🌵 Agaves • 🍄 Hongos • 🦇 Murciélagos • 🦋 Polillas • ⭐ Especies de interés, • ⚠️ Especies en riesgo o prioritarias • 🧬 Subespecies</p>
+                <p>
+                  Los hongos comestibles son fundamentales para los ecosistemas terrestres. Los hongos micorrícicos estructuran los bosques y mitigan el cambio climático mediante el almacenamiento de carbono en árboles y suelo. Representan una fuente alimentaria saludable: existen más de 200 géneros con especies útiles que pueden contribuir sustancialmente a la dieta y generar ingresos en países en desarrollo.
+                </p>
+                <p>
+                  México alberga aproximadamente 450 especies de hongos comestibles consumidas por diversos grupos étnicos, identificadas con más de 5,000 nombres. En Tlaxcala, especialmente en las faldas del Parque Nacional La Malinche, estos organismos tienen gran importancia biocultural, alimentaria, medicinal y económica. Usos recientes como la micoforestería y el micoturismo representan fuentes alternativas de ingresos y esquemas de manejo sostenible.
+                </p>
+                <p>
+                  El cambio climático amenaza su producción: modificaciones en precipitación, temperatura y lluvias torrenciales pueden alterar la composición de especies, favoreciendo hongos tolerantes al calor y sequía. Se observan cambios fenológicos, retrasos en fructificación y temporadas de crecimiento prolongadas. La modificación del nitrógeno en el suelo reduce la diversidad, y hongos tóxicos no nativos representan riesgos de intoxicación.
+                </p>                
+                <p>
+                  Los resultados muestran que 25 especies (29%) presentan alta vulnerabilidad según modelos HadGEM3-GC31-LL y MIROC6, escenario SSP 5-8.5 para 2041-2060.
+                </p>  
             </div>
           </div>
 
@@ -696,6 +697,37 @@
             </div>
           </div> -->
         </section>
+
+        <!-- CAPÍTULO 4 -->
+        <section class="chapter" id="chapter-4" data-chapter="4">
+          <!-- Título del mapa -->
+          <h2 class="map-title">Vulnerabilidad de la biodiversidad - Ganancia de Idoneidad</h2>
+
+          <!-- Imagen del mapa -->
+          <div class="chapter-map chapter-map-image">
+            <img src="images/mapa55.png" alt="Mapa de Ganancia de Idoneidad" class="map-image">
+          </div>
+
+          <!-- Card de texto -->
+          <div class="chapter-text">
+            <!-- <span class="chapter-number">Capítulo 4</span> -->
+            <h2 class="chapter-title">Ganancia de Idoneidad</h2>
+            <div class="chapter-content">
+              <p>La "ganancia de idoneidad climática" describe cómo las condiciones climáticas cambiantes se vuelven más favorables para la supervivencia, reproducción o expansión de una especie. En el caso del descortezador, un escarabajo de corteza que actúa como plaga forestal, esta ganancia indica cómo el cambio climático, especialmente el aumento de temperatura, beneficia su proliferación.</p>
+              <p>El descortezador es altamente sensible a las condiciones climáticas. El aumento de la temperatura media anual genera ganancia de idoneidad de varias formas: acelera su ciclo de vida permitiendo reproducción más rápida y mayor número de generaciones anuales; incrementa su actividad resultando en mayores infestaciones de árboles; y expande las áreas potencialmente habitables.</p>
+              <p>Los modelos HadGEM3-GC31-LL_ssp245_2041-2060 y MPI-ESM1-2-HR proyectan escenarios con mayor idoneidad climática para esta especie, lo que representa consecuencias negativas para los ecosistemas forestales. Estos insectos pueden causar daños extensos, afectar la biodiversidad y comprometer la salud de los bosques.</p>
+              <p>Comprender estos cambios climáticos y su impacto en las poblaciones de plagas forestales es fundamental para implementar estrategias de gestión y control adecuadas que protejan los ecosistemas y mitiguen los efectos adversos de estas proliferaciones.</p>
+            </div>
+          </div>
+
+          <!-- Card de gráfico -->
+<!--           <div class="chapter-chart">
+            <h3 class="chart-title">Categorías de Vulnerabilidad</h3>
+            <div class="chart-container">
+              <canvas id="chart-4"></canvas>
+            </div>
+          </div> -->
+        </section>
       </div>
 
       <!-- Timeline inferior -->
@@ -711,6 +743,10 @@
         <div class="timeline-item" data-chapter="3">
           <div class="timeline-circle">3</div>
           <div class="timeline-label">Vulnerabilidad de Biodiversidad - Pérdida</div>
+        </div>
+        <div class="timeline-item" data-chapter="4">
+          <div class="timeline-circle">4</div>
+          <div class="timeline-label">Vulnerabilidad de Biodiversidad - Ganancia</div>
         </div>
       </div>
 
