--- a/vulnerabilidad.html
+++ b/vulnerabilidad.html
@@ -671,7 +671,7 @@
         <!-- CAPÍTULO 3 -->
         <section class="chapter chapter-biodiversity" id="chapter-3" data-chapter="3">
           <!-- Título del mapa -->
-          <h2 class="map-title">Vulnerabilidad de la biodiversidad - Ganancia/Pérdida de Idoneidad</h2>
+          <h2 class="map-title">Vulnerabilidad de la biodiversidad - Ganancia de Idoneidad</h2>
 
           <!-- Mapa -->
           <div class="chapter-map">
@@ -681,7 +681,7 @@
 
           <!-- Card de texto superior -->
           <div class="chapter-text">
-            <h2 class="chapter-title">Pérdida de Idoneidad</h2>
+            <h2 class="chapter-title">Ganancia de Idoneidad</h2>
             <div class="chapter-content">
               <p>
                 El cambio climático está reduciendo las áreas donde nuestras especies pueden vivir: se pierde su idoneidad climática
@@ -743,28 +743,35 @@
             <h2>🐝 Abejas</h2>
           </div>
 
-          <!-- Card de texto -->
+          <!-- Submenú de Modelos Climáticos -->
           <div class="subchapter-text">
-            <div class="text-content">
-                <p>
-                  Los polinizadores, especialmente las abejas, son fundamentales para los ecosistemas y la agricultura: 87 de los principales cultivos alimentarios dependen de ellos. Además de producir miel, capturan carbono, purifican agua y mantienen la biodiversidad.
-                </p>
-                <p>
-                  Entre las 14 especies estudiadas destacan los abejorros (género Bombus), capaces de trabajar en temperaturas extremas y esenciales para cultivos comerciales y plantas silvestres como los agaves. Sin embargo, son vulnerables por sus largos ciclos de vida y necesidades de hábitat específicas.
-                </p>
-                <p>
-                  El cambio climático amenaza estas especies: altera tiempos de floración, aumenta sequías, desplaza especies a mayores altitudes y reduce áreas idóneas. Los resultados muestran que tres especies (21.4%) presentan alta vulnerabilidad según el modelo HadGEM3-GC31-LL bajo el escenario SSP 5-8.5 para 2041-2060, con impactos ecológicos y económicos significativos.
-                </p>
-                <p>
-                  La disminución en la riqueza de especies y la posible colonización por especies invasoras agravan el panorama. Las disrupciones en las redes de polinización entre plantas y abejas comprometen tanto la seguridad alimentaria como el equilibrio de los ecosistemas naturales, haciendo urgente implementar estrategias de conservación y adaptación.
-                </p>
+            <div class="models-menu">
+              <h3 class="models-menu-title">Modelos Climáticos</h3>
+              <div class="models-list">
+                <button class="model-item active" data-model="HadGEM3.GC31.LL_ssp245" data-subcapitulo="3.1">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">HadGEM3.GC31.LL_ssp245</span>
+                </button>
+                <button class="model-item" data-model="HadGEM3.GC31.LL_ssp585" data-subcapitulo="3.1">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">HadGEM3.GC31.LL_ssp585</span>
+                </button>
+                <button class="model-item" data-model="MIROC6_ssp245" data-subcapitulo="3.1">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MIROC6_ssp245</span>
+                </button>
+                <button class="model-item" data-model="MIROC6_ssp585" data-subcapitulo="3.1">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MIROC6_ssp585</span>
+                </button>
+              </div>
             </div>
           </div>
 
           <!-- Menú de navegación superior -->
           <div class="subchapter-menu">
             <button class="back-button" data-action="back-to-biodiversity">
-              ← Volver a Ganancia/Pérdida
+              ← Volver a Ganancia
             </button>
             <span class="menu-divider"></span>
             <div class="subchapter-nav">
@@ -814,7 +821,7 @@
           <!-- Menú de navegación superior -->
           <div class="subchapter-menu">
             <button class="back-button" data-action="back-to-biodiversity">
-              ← Volver a Ganancia/Pérdida
+              ← Volver a Ganancia
             </button>
             <span class="menu-divider"></span>
             <div class="subchapter-nav">
@@ -864,7 +871,7 @@
           <!-- Menú de navegación superior -->
           <div class="subchapter-menu">
             <button class="back-button" data-action="back-to-biodiversity">
-              ← Volver a Ganancia/Pérdida
+              ← Volver a Ganancia
             </button>
             <span class="menu-divider"></span>
             <div class="subchapter-nav">
@@ -914,7 +921,7 @@
           <!-- Menú de navegación superior -->
           <div class="subchapter-menu">
             <button class="back-button" data-action="back-to-biodiversity">
-              ← Volver a Ganancia/Pérdida
+              ← Volver a Ganancia
             </button>
             <span class="menu-divider"></span>
             <div class="subchapter-nav">
@@ -964,7 +971,7 @@
           <!-- Menú de navegación superior -->
           <div class="subchapter-menu">
             <button class="back-button" data-action="back-to-biodiversity">
-              ← Volver a Ganancia/Pérdida
+              ← Volver a Ganancia
             </button>
             <span class="menu-divider"></span>
             <div class="subchapter-nav">
@@ -1014,7 +1021,7 @@
           <!-- Menú de navegación superior -->
           <div class="subchapter-menu">
             <button class="back-button" data-action="back-to-biodiversity">
-              ← Volver a Ganancia/Pérdida
+              ← Volver a Ganancia
             </button>
             <span class="menu-divider"></span>
             <div class="subchapter-nav">
@@ -1064,7 +1071,7 @@
           <!-- Menú de navegación superior -->
           <div class="subchapter-menu">
             <button class="back-button" data-action="back-to-biodiversity">
-              ← Volver a Ganancia/Pérdida
+              ← Volver a Ganancia
             </button>
             <span class="menu-divider"></span>
             <div class="subchapter-nav">
@@ -1114,7 +1121,7 @@
           <!-- Menú de navegación superior -->
           <div class="subchapter-menu">
             <button class="back-button" data-action="back-to-biodiversity">
-              ← Volver a Ganancia/Pérdida
+              ← Volver a Ganancia
             </button>
             <span class="menu-divider"></span>
             <div class="subchapter-nav">
@@ -1168,7 +1175,7 @@
           <!-- Menú de navegación superior -->
           <div class="subchapter-menu">
             <button class="back-button" data-action="back-to-biodiversity">
-              ← Volver a Ganancia/Pérdida
+              ← Volver a Ganancia
             </button>
             <span class="menu-divider"></span>
             <div class="subchapter-nav">
@@ -1206,7 +1213,7 @@
         </div>
         <div class="timeline-item" data-chapter="3">
           <div class="timeline-circle">3</div>
-          <div class="timeline-label">Biodiversidad - Ganancia/Pérdida</div>
+          <div class="timeline-label">Biodiversidad - Ganancia</div>
         </div>
       </div>
 
