Carga de mapas vulnerabilidad

--- a/vulnerabilidad.html
+++ b/vulnerabilidad.html
@@ -748,13 +748,21 @@
             <div class="models-menu">
               <h3 class="models-menu-title">Modelos Climáticos</h3>
               <div class="models-list">
-                <button class="model-item active" data-model="HadGEM3.GC31.LL_ssp245" data-subcapitulo="3.1">
+                <button class="model-item" data-model="HadGEM3.GC31.LL_ssp245" data-subcapitulo="3.1">
                   <span class="model-icon">🌡️</span>
                   <span class="model-name">HadGEM3.GC31.LL_ssp245</span>
                 </button>
                 <button class="model-item" data-model="HadGEM3.GC31.LL_ssp585" data-subcapitulo="3.1">
                   <span class="model-icon">🌡️</span>
                   <span class="model-name">HadGEM3.GC31.LL_ssp585</span>
+                </button>
+                <button class="model-item" data-model="MPI.ESM1.2.HR_ssp245" data-subcapitulo="3.1">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MPI.ESM1.2.HR_ssp245</span>
+                </button>
+                <button class="model-item" data-model="MPI.ESM1.2.HR_ssp585" data-subcapitulo="3.1">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MPI.ESM1.2.HR_ssp585</span>
                 </button>
                 <button class="model-item" data-model="MIROC6_ssp245" data-subcapitulo="3.1">
                   <span class="model-icon">🌡️</span>
