Carga de mapas vulnerabilidad

--- a/vulnerabilidad.html
+++ b/vulnerabilidad.html
@@ -808,21 +808,36 @@
             <h2>🌵 Agaves</h2>
           </div>
 
-          <!-- Card de texto -->
+          <!-- Submenú de Modelos Climáticos -->
           <div class="subchapter-text">
-            <div class="text-content">
-                <p>
-                  Los agaves son plantas de gran importancia ecológica y cultural en Mesoamérica, usadas desde hace milenios. Producen aguamiel, jarabe, pulque y destilados como mezcal, tequila, bacanora y raicilla. También se emplean en construcción, vestimenta y alimentación.
-                </p>
-                <p>
-                  Tlaxcala es el segundo productor de maguey pulquero en México, siendo el pulque parte fundamental de su identidad cultural. Nanacamilpa destaca con 92 usos diferentes para 8-12 razas de agave. De las especies evaluadas, tres se usan para mezcal (A. americana, A. angustifolia y A. salmiana subsp. crassispina) y cuatro para pulque (A. atrovirens, A. americana, A. salmiana y A. mapisaga).
-                </p>
-                <p>
-                  El cambio climático representa amenazas y oportunidades. La falta de reproducción sexual en los sistemas de producción los hace vulnerables a plagas y enfermedades. Se prevé modificación en su distribución geográfica, potencialmente disrumpiendo la relación con el murciélago magueyero. Sin embargo, las zonas climáticamente idóneas podrían expandirse, abriendo nuevas áreas de cultivo.
-                </p>
-                <p>
-                  Los resultados indican que seis especies (50% del total evaluado) serán altamente vulnerables según el modelo HadGEM3-GC31-LL, escenario SSP 2-4.5 para 2041-2060.
-                </p>
+            <div class="models-menu">
+              <h3 class="models-menu-title">Modelos Climáticos</h3>
+              <div class="models-list">
+                <button class="model-item" data-model="HadGEM3.GC31.LL_ssp245" data-subcapitulo="3.2">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">HadGEM3.GC31.LL_ssp245</span>
+                </button>
+                <button class="model-item" data-model="HadGEM3.GC31.LL_ssp585" data-subcapitulo="3.2">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">HadGEM3.GC31.LL_ssp585</span>
+                </button>
+                <button class="model-item" data-model="MPI.ESM1.2.HR_ssp245" data-subcapitulo="3.2">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MPI.ESM1.2.HR_ssp245</span>
+                </button>
+                <button class="model-item" data-model="MPI.ESM1.2.HR_ssp585" data-subcapitulo="3.2">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MPI.ESM1.2.HR_ssp585</span>
+                </button>
+                <button class="model-item" data-model="MIROC6_ssp245" data-subcapitulo="3.2">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MIROC6_ssp245</span>
+                </button>
+                <button class="model-item" data-model="MIROC6_ssp585" data-subcapitulo="3.2">
+                  <span class="model-icon">🌡️</span>
+                  <span class="model-name">MIROC6_ssp585</span>
+                </button>
+              </div>
             </div>
           </div>
 
